Fixed info bar spacing

--- a/app/assets/stylesheets/components/profile_show.scss
+++ b/app/assets/stylesheets/components/profile_show.scss
@@ -17,9 +17,9 @@
 
 .profshow {
     border: black solid;
-    height: 100%;
+    height: 7vh;
     // align-items: space-between;
-    width: 50vh;
+    width: 35vh;
 }
 
 .profile {
@@ -28,6 +28,7 @@
     flex-grow: 1;
     height: 50vh;
     margin-right: 15%;
+    margin-left: 50px;
     // justify-content: space-around;
     // padding: 10px;
     
@@ -36,19 +37,20 @@
 
 #profilewrapper {
     display: flex;
+    margin-top: 50px;
     // justify-content: space-between;
 }
 
 #bio {
     
     // flex-grow: 1;
-    // height: 100vh;
-    width: 75vh;
+    height: 15vh;
+    width: 60vh;
     display: flex;
     flex-direction: column;
     // align-items: flex-end;
-    margin-left: 20%;
-    border: black solid;
+    margin-left: 25%;
+    // border: black solid;
     // justify-content: flex-end;
     background-color: white;
     // padding: 10px;
@@ -56,5 +58,43 @@
 
 }
 
-#biotext {
+#edit-profile {
+    background-color: darkorchid;
+    color: white;
+    // margin-top: -10px;
+}
+
+#info-bar {
+    color: white;
+    background-color: black;
+    height: 20vh;
+    display: flex;
+    padding-left: 25%;
+    // border: white solid;
+    // justify-content: space-evenly;
+    // align-items: center;
+}
+
+#name {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    // height: 100%;
+    // border: white solid;
+    margin: 0px;
+    // margin-bottom: 10px;
+
+}
+#name-age {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+#age-location {
+    display: flex;
+}
+
+.al {
+    margin-right: 20px;
 }
